--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-grid-system": "^8.1.6",
     "react-icons": "^4.2.0",
     "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^4.0.0",
