--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Environment variables setup
-        run: |
-          cd $GITHUB_WORKSPACE
-          echo "$SECRETS" > ./.github/workflows/scripts/env.json
-          docker run -v $GITHUB_WORKSPACE:/usr/app node:16.15-alpine sh -c "cd /usr/app && node .github/workflows/scripts/generate-env-file.js"
-        env:
-          SECRETS: ${{ toJson(secrets) }}
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_REACT_APP_GITHUB_CLIENT_ID: ${{ secrets.REACT_APP_GITHUB_CLIENT_ID }}
+          envkey_REACT_APP_GITHUB_REDIRECT_URI: ${{ secrets.REACT_APP_GITHUB_REDIRECT_URI }}
+          envkey_REACT_APP_API_BASE_URL: ${{ secrets.REACT_APP_API_BASE_URL }}
+          file_name: .env
+          fail_on_empty: true
 
       - name: Build
         run: docker-compose build
